fix: style overflow table

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,9 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
